# dx-sdk-rs-new

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  abi.sh  build-wasm.sh  clean-wasm.sh  publish.sh  rustfmt.toml  vm-test-build-copy.sh
contracts/examples/nft-subscription/: Cargo.toml
contracts/examples/nft-subscription/meta/: Cargo.toml
contracts/examples/nft-subscription/wasm/: Cargo.toml
contracts/examples/proxy-pause/: Cargo.toml
contracts/examples/proxy-pause/meta/: Cargo.toml
contracts/examples/proxy-pause/wasm/: Cargo.toml
contracts/feature-tests/composability/: Cargo.toml
contracts/feature-tests/composability/builtin-func-features/: Cargo.toml
contracts/feature-tests/composability/builtin-func-features/meta/: Cargo.toml
contracts/feature-tests/composability/builtin-func-features/wasm/: Cargo.toml
contracts/feature-tests/composability/dct-contract-pair/: Cargo.toml
contracts/feature-tests/composability/dct-contract-pair/first-contract/: Cargo.toml
contracts/feature-tests/composability/dct-contract-pair/second-contract/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/child/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/parent/: Cargo.toml
contracts/feature-tests/composability/forwarder/: Cargo.toml
contracts/feature-tests/composability/forwarder-queue/: Cargo.toml
contracts/feature-tests/composability/forwarder-queue/meta/: Cargo.toml
contracts/feature-tests/composability/forwarder-queue/wasm/: Cargo.toml
contracts/feature-tests/composability/forwarder-queue/wasm-forwarder-queue-promises/: Cargo.toml
contracts/feature-tests/composability/forwarder-raw/: Cargo.toml
contracts/feature-tests/composability/forwarder-raw/meta/: Cargo.toml
contracts/feature-tests/composability/forwarder-raw/src/: forwarder_raw.rs
contracts/feature-tests/composability/forwarder-raw/wasm/: Cargo.toml
contracts/feature-tests/composability/forwarder-raw/wasm-forwarder-raw-init-async-call/: Cargo.toml
contracts/feature-tests/composability/forwarder-raw/wasm-forwarder-raw-init-sync-call/: Cargo.toml
contracts/feature-tests/composability/forwarder-raw/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/composability/forwarder/interaction/: snippets.sh
contracts/feature-tests/composability/forwarder/meta/: Cargo.toml
contracts/feature-tests/composability/forwarder/src/: call_async.rs  call_queue.rs  call_sync.rs  call_transf_exec.rs
contracts/feature-tests/composability/forwarder/wasm/: Cargo.toml
contracts/feature-tests/composability/forwarder/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/composability/interact/: Cargo.toml
contracts/feature-tests/composability/local-dct-and-nft/: Cargo.toml
contracts/feature-tests/composability/local-dct-and-nft/meta/: Cargo.toml
contracts/feature-tests/composability/local-dct-and-nft/wasm/: Cargo.toml
contracts/feature-tests/composability/promises-features/: Cargo.toml
contracts/feature-tests/composability/promises-features/meta/: Cargo.toml
contracts/feature-tests/composability/promises-features/src/: call_promise_direct.rs  call_promises.rs
contracts/feature-tests/composability/promises-features/tests/: promises_feature_blackbox_test.rs
contracts/feature-tests/composability/promises-features/wasm/: Cargo.toml
contracts/feature-tests/composability/proxy-test-first/: Cargo.toml
contracts/feature-tests/composability/proxy-test-first/meta/: Cargo.toml
contracts/feature-tests/composability/proxy-test-first/wasm/: Cargo.toml
contracts/feature-tests/composability/proxy-test-first/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/composability/proxy-test-second/: Cargo.toml
contracts/feature-tests/composability/proxy-test-second/meta/: Cargo.toml
contracts/feature-tests/composability/recursive-caller/: Cargo.toml
contracts/feature-tests/composability/scenarios-promises/: forwarder_call_sync_retrieve_dct_bt.scen.json  forwarder_call_sync_retrieve_moax_bt.scen.json  forwarder_call_sync_retrieve_nft_bt.scen.json
contracts/feature-tests/composability/tests/: composability_denali_go_test.rs  composability_denali_rs_test.rs
contracts/feature-tests/composability/transfer-role-features/: Cargo.toml
contracts/feature-tests/composability/vault/: Cargo.toml
contracts/feature-tests/composability/vault/meta/: Cargo.toml
framework/meta/: Cargo.toml  README.md
framework/meta/src/: lib.rs  meta_cli.rs  meta_config.rs  meta_main.rs  version_history.rs
framework/meta/src/abi_json/: contract_abi_json.rs  dct_attribute_abi_json.rs  endpoint_abi_json.rs
framework/meta/src/cli_args/: cli_args_contract.rs  cli_args_standalone.rs  meta_build_args.rs
framework/meta/src/cmd/: contract.rs
framework/meta/src/generate_snippets/: snippet_crate_gen.rs
framework/meta/src/sc_upgrade/: folder_structure.rs  upgrade_0_39.rs  upgrade_print.rs  upgrade_selector.rs  upgrade_versions.rs
framework/meta/tests/: cli_arg_test.rs  multi_contract_test.rs
framework/scenario/: Cargo.toml
framework/scenario/src/: api.rs  bech32.rs  lib.rs
framework/scenario/src/api/: impl_vh.rs
framework/scenario/src/facade/: scenario_world.rs  scenario_world_steps_deprecated.rs
framework/scenario/src/standalone/: account_tool.rs
framework/scenario/src/whitebox/: mod.rs
framework/scenario/tests/: derive_managed_vec_item_struct_1_test.rs  derive_managed_vec_item_struct_2_test.rs
framework/scenario/tests/scenarios-io/: example_normalized.scen.json  example_raw.scen.json
tools/moapy-snippet-generator/: Cargo.toml
tools/moapy-snippet-generator/src/: moapy_snippet_generator.rs
vm/: Cargo.toml
vm/src/: crypto_functions.rs
vm/src/scenario/model/: step_handler.rs
vm/src/tx_mock/: tx_back_transfers.rs  tx_context.rs
vm/src/types/: vm_h256.rs
vm/src/vm_hooks/: vh_dispatcher.rs  vh_source.rs
vm/src/vm_hooks/vh_handler/: vh_blockchain.rs
vm/src/vm_hooks/vh_impl/: vh_debug_api.rs  vh_single_tx_api.rs  vh_static_api.rs
(+578 files in other folders)
