[package]
name = "dharitri-chain-vm"
version = "0.4.2"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-new"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri VM implementation and tooling"
keywords = ["dharitri", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.9.2"
sha3 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
rand_pcg = "0.2.1"
rand_seeder = "0.2.2"
pathdiff = "0.2.1"
ed25519-dalek = "1.0.1"
itertools = "0.10.3"
bech32 = "0.9.0"

[dependencies.dharitri-sc]
version = "=0.10.9"
path = "../framework/base"
features = ["alloc", "num-bigint", "promises", "big-float"]

[dependencies.dharitri-sc-meta]
version = "=0.10.9"
path = "../framework/meta"

[dependencies.dharitri-chain-scenario-format]
version = "0.19.0"
path = "../sdk/scenario-format"

[dev-dependencies.dharitri-sc-meta] # only used in the sample_adder test
version = "=0.10.9"
path = "../framework/meta"
