[package]
name = "dharitri-sc-scenario"
version = "0.11.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-new"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri tools for writing and executing scenarios"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10.6"
sha3 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.2"
pathdiff = "0.2.1"
ed25519-dalek = "1.0.1"
itertools = "0.10.3"
bech32 = "0.9"

[features]
run-go-tests = []

[dependencies.dharitri-chain-vm]
version = "=0.4.3"
path = "../../vm"
