[package]
name = "nft-subscription"
version = "0.0.0"
authors = ["Thouny <thouny@tuta.io>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "0.13.7"
path = "../../../framework/base"

[dependencies.dharitri-sc-modules]
version = "0.13.7"
path = "../../../contracts/modules"

[dev-dependencies.dharitri-sc-scenario]
version = "0.13.7"
path = "../../../framework/scenario"
