[package]
name = "proxy-pause"
version = "0.0.0"
authors = [ "you",]
edition = "2021"
publish = false

[lib]
path = "src/proxy_pause.rs"

[dependencies.dharitri-sc]
version = "0.10.9"
path = "../../../framework/base"

[dependencies.dharitri-sc-modules]
version = "0.10.9"
path = "../../../contracts/modules"

[dev-dependencies.dharitri-sc-scenario]
version = "0.10.9"
path = "../../../framework/scenario"

[dev-dependencies.use-module]
path = "../../feature-tests/use-module"
