[package]
name = "composability-tests"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.forwarder]
path = "forwarder"

[dependencies.forwarder-raw]
path = "forwarder-raw"

[dependencies.promises-features]
path = "promises-features"

[dependencies.proxy-test-first]
path = "proxy-test-first"

[dependencies.proxy-test-second]
path = "proxy-test-second"

[dependencies.recursive-caller]
path = "recursive-caller"

[dependencies.vault]
path = "vault"

[dependencies.dharitri-sc]
version = "0.10.9"
path = "../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.10.9"
path = "../../../framework/scenario"
