[package]
name = "promises-features"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/promises_main.rs"

[dependencies.vault]
path = "../vault"

[dependencies.dharitri-sc]
version = "0.13.1"
path = "../../../../framework/base"
features = ["promises", "back-transfers"]

[dev-dependencies.dharitri-sc-scenario]
version = "0.13.1"
path = "../../../../framework/scenario"
